Fixing the p spacing

--- a/assets/scss/base/_custom.scss
+++ b/assets/scss/base/_custom.scss
@@ -71,7 +71,7 @@ hr {
 }
 // set base paragraph size
 p {
-	line-height: 2;
+	line-height: 1.2rem;
 	margin-bottom: rem-calc(10);
 	text-rendering: optimizeLegibility;
 	font-size: $body-font-size;
